--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,5 +10,7 @@
     <h1>Hola Mundo!!</h1>
     <p>Cómo estás?</p>
     <button>Ver más</button>
+    <h2>Rama grid-index</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, rerum!</p>
 </body>
 </html>
